Web Animations: Make AnimationPlaybackEvent's members null by default

Whilst the code did correctly check whether the members of
AnimationPlaybackEventInit were null, the AnimationPlaybackEvent
constructor was setting them to 0.0 as a default value, which is
incorrect via the spec:

https://drafts.csswg.org/web-animations-1/#the-animationplaybackevent-interface

This CL also converts the class members to use WTF::Optional to
clearly distinguish between them being set and not set.

Bug: 827572
Change-Id: I471666a022963dd19f8a74eaebafeeebf4e96c66
Reviewed-on: https://chromium-review.googlesource.com/988339
Reviewed-by: Xida Chen <xidachen@chromium.org>
Reviewed-by: dsinclair <dsinclair@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547715}
Former-commit-id: cc4fa433ef22545acfca61e8029c0f7fff8de17c